--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8081
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/HospitalManagement
-spring.datasource.username=root
-spring.datasource.password=1@Mmysql
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
